@@ -14,6 +14,7 @@ Build-Depends: debhelper (>= 9),
                libxtst-dev,
                libgsettings-qt-dev,
                libmate-desktop-dev,
+               libkf5windowsystem-dev,
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
 Homepage: https://github.com/ukui/kylin-display-switch
