@@ -20,10 +20,35 @@
 #include "widget.h"
 #include <QApplication>
 
+#include <X11/Xlib.h>
+
 #include "qtsingleapplication.h"
+
+int getCurrentScreenWidth(){
+    Display * pDis = XOpenDisplay(0);
+    if (NULL == pDis){
+        return 0;
+    }
+
+    Screen * pScreen = DefaultScreenOfDisplay(pDis);
+    if (NULL == pScreen){
+        return 0;
+    }
+
+    int width = pScreen->width;
+    XCloseDisplay(pDis);
+
+    return width;
+}
 
 int main(int argc, char *argv[])
 {
+
+    if (getCurrentScreenWidth() > 2560){
+        QApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
+        QApplication::setAttribute(Qt::AA_UseHighDpiPixmaps);
+    }
+
     QString id = QString("mkt" + QLatin1String(getenv("DISPLAY")));
 
     QtSingleApplication app(id, argc, argv);
