@@ -21,6 +21,8 @@ DEFINES += QT_DEPRECATED_WARNINGS
 include (../shared/qtsingleapplication/qtsingleapplication.pri)
 include (../utils/utils.pri)
 
+LIBS += -lX11
+
 # You can also make your code fail to compile if you use deprecated APIs.
 # In order to do so, uncomment the following line.
 # You can also select to disable deprecated APIs only up to a certain version of Qt.
